update routes to use usecases
