# cmd/api/swagger/swagger.json
@@ -42,7 +42,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_server_routes_v1.CheckoutRequest"
+                            "$ref": "#/definitions/internal_server_routes_v1_chekout.checkoutRequest"
                         }
                     }
                 ],
@@ -231,7 +231,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_server_routes_v1.UpdateSalesPriceRequest"
+                            "$ref": "#/definitions/internal_server_routes_v1_product_management.updateSalesPriceRequest"
                         }
                     }
                 ],
@@ -639,7 +639,7 @@
                 }
             }
         },
-        "internal_server_routes_v1.CheckoutRequest": {
+        "internal_server_routes_v1_chekout.checkoutRequest": {
             "type": "object",
             "required": [
                 "clientID"
@@ -656,7 +656,7 @@
                 }
             }
         },
-        "internal_server_routes_v1.UpdateSalesPriceRequest": {
+        "internal_server_routes_v1_product_management.updateSalesPriceRequest": {
             "type": "object",
             "required": [
                 "price"
